--- a/HTML/Theme/dark/index.html
+++ b/HTML/Theme/dark/index.html
@@ -46,6 +46,9 @@
       <!-- flag icon framework css -->
       <link rel="stylesheet" type="text/css" href="assets/pages/flag-icon/flag-icon.min.css">
       <!-- C3 chart -->
+	    <!-- Calender css -->
+      <link rel="stylesheet" type="text/css" href="assets/pages/widget/calender/pignose.calendar.min.css">
+
       <link rel="stylesheet" href="../bower_components/c3/css/c3.css" type="text/css" media="all">
       <!-- Data Table Css -->
       <link rel="stylesheet" type="text/css" href="../bower_components/datatables.net-bs4/css/dataTables.bootstrap4.min.css">
@@ -3148,6 +3151,70 @@
                                                 </div>
                                                 <!-- Small table start-->
                                             </div>
+ <!-- Calender card start -->
+                                            <div class="col-md-12 col-xl-7">
+                                                <div class="row">
+                                                    <div class="col-sm-12">
+                                                        <div class="card borderless-card">
+                                                            <div class="row">
+                                                                <div class="col-sm-3 weather-card-1  text-center">
+                                                                    <div class="mob-bg-calender bg-primary">
+                                                                        <h3 class="text-uppercase">Monday</h3>
+                                                                        <h1 class="weather-temp">27</h1>
+                                                                    </div>
+                                                                </div>
+                                                                <div class="col-sm-9 p-l-0">
+                                                                    <div class="weather-calender">
+                                                                        <div class="widget-calender"></div>
+                                                                    </div>
+                                                                </div>
+                                                            </div>
+                                                        </div>
+                                                    </div>
+                                                </div>
+                                            </div>
+                                            <!-- Calender card end -->
+ <!-- Notification Start -->
+                                            <div class="col-md-12 col-xl-5">
+                                                <div class="card">
+                                                    <div class="card-block">
+                                                        <h5>NOtifiction</h5>
+                                                    </div>
+                                                    <div class="card-block p-t-20">
+                                                        <div class="card-notification">
+                                                            <div class="card-noti-conatin">
+                                                                <h6>5 mins ago</h6>
+                                                                <p class="text-muted m-b-30">jennifer sent you an attachament</p>
+                                                            </div>
+                                                        </div>
+                                                        <div class="card-notification">
+                                                            <div class="card-noti-conatin">
+                                                                <h6>45 mins ago</h6>
+                                                                <p class="text-muted m-b-30">Paul has sent a request for <span>access</span> to the project folder</p>
+                                                            </div>
+                                                        </div>
+                                                        <div class="card-notification">
+                                                            <div class="card-noti-conatin">
+                                                                <h6>2 days ago</h6>
+                                                                <p class="text-muted m-b-30">Demin change the dedline on the project</p>
+                                                            </div>
+                                                        </div>
+                                                        <div class="card-notification">
+                                                            <div class="card-noti-conatin">
+                                                                <h6>12 mins ago</h6>
+                                                                <p class="text-muted m-b-30">jennifer invite you to join the project</p>
+                                                            </div>
+                                                        </div>
+                                                        <div class="card-notification">
+                                                            <div class="card-noti-conatin">
+                                                                <h6>60 mins ago</h6>
+                                                                <p class="text-muted m-b-30">Josephine <span>share</span> a folder with you</p>
+                                                            </div>
+                                                        </div>
+                                                    </div>
+                                                </div>
+                                            </div>
+                                            <!-- Notification End -->
 
                                             <!-- facebook Start -->
                                             <div class="col-md-12 col-lg-6">
@@ -3330,6 +3397,12 @@
 <script src="assets/js/demo-12.js"></script>
 <script src="assets/js/jquery.mCustomScrollbar.concat.min.js"></script>
 <script src="assets/js/jquery.mousewheel.min.js"></script>
+<!-- Calender js -->
+<script type="text/javascript" src="../bower_components/moment/js/moment.min.js"></script>
+<script type="text/javascript" src="assets/pages/widget/calender/pignose.calendar.min.js"></script>
+<script type="text/javascript" src="assets/pages/dashboard/crm-dashboard.js"></script>
+
+
 </body>
 
 </html>
