new changes during candidate apply

--- a/HTML/Theme/dark/index.html
+++ b/HTML/Theme/dark/index.html
@@ -3027,6 +3027,14 @@
                                                     <div class="card-header" style="padding: 22px 20px;">
                                                         <h5>Recruitment Stats</h5>
                                                         <div class="card-header-right">
+                                                          <select class="js-example-basic-multiple" multiple="multiple">
+                                                                <option selected="">All</option>
+                                                                <option value="AL">Web Developer</option>
+                                                                <option value="WY">DevOps Engineer</option>
+                                                                <option value="WY">Team Lead</option>
+                                                                <option value="WY">Business Developer</option>
+                                                                <option value="WY">Quality Analyst</option>
+                                                            </select>
                                                             <select class="js-example-basic-multiple" multiple="multiple">
                                                                 <option selected="">All</option>
                                                                 <option value="AL">Company</option>
