pull request error

--- a/HTML/Theme/dark/ready-job-application-form.html
+++ b/HTML/Theme/dark/ready-job-application-form.html
@@ -2930,6 +2930,10 @@
 <script type="text/javascript" src="assets/pages/j-pro/js/jquery.maskedinput.min.js"></script>
 <script type="text/javascript" src="assets/pages/j-pro/js/jquery.j-pro.js"></script>
 <script type="text/javascript" src="assets/pages/j-pro/js/custom/form-job.js"></script>
+<!-- x-editable (bootstrap version) -->
+<script type="text/javascript" src="assets/pages/x-editable/js/tm_editable.js"></script>
+<script type="text/javascript" src="assets/pages/x-editable/js/tm_validator.js"></script>
+<script type="text/javascript" src="assets/pages/x-editable/js/xeditable.js"></script>
 
     <script src="assets/js/pcoded.min.js"></script>
     <script src="assets/js/demo-12.js"></script>
