modifications candidate-apply.html

--- a/HTML/Theme/dark/candidate-apply.html
+++ b/HTML/Theme/dark/candidate-apply.html
@@ -45,7 +45,7 @@
 
 </head>
 
-<body class="multi-step-sign-up">
+<body class="multi-step-sign-up" id="candidate-apply">
     <form id="msform">
         <!-- progressbar -->
         <ul id="progressbar" class="form-candidate">
