--- a/HTML/Theme/dark/Job-Submission.html
+++ b/HTML/Theme/dark/Job-Submission.html
@@ -961,7 +961,35 @@
         </div>
     </div>
 
-
+<div class="modal fade" id="vediocv" tabindex="-1">
+    <div class="modal-dialog" role="document">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h5 class="modal-title">Record CV</h5>
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                    <span aria-hidden="true">&times;</span>
+                </button>
+            </div>
+            <div class="modal-body">
+                <div>
+                   <video id="myVideo" class="video-js vjs-default-skin">
+  <p class="vjs-no-js">
+    To view this video please enable JavaScript, or consider upgrading to a
+    web browser that
+    <a href="http://videojs.com/html5-video-support/" target="_blank">
+      supports HTML5 video.
+    </a>
+  </p>
+</video>
+                </div>
+            </div>
+            <div class="modal-footer">
+                <button type="button" class="btn btn-primary">Send</button>
+                <button type="button" class="btn btn-default" data-dismiss="modal">Cancel</button>
+            </div>
+        </div>
+    </div>
+</div>
 
     <!-- Warning Section Starts -->
     <!-- Older IE warning message -->
