--- a/HTML/Theme/dark/Job-Description.html
+++ b/HTML/Theme/dark/Job-Description.html
@@ -707,8 +707,8 @@
                                                                 <!-- Tab panes -->
                                                                 <div class="tab-content card-block">
                                                                     <div class="tab-pane active" id="home7" role="tabpanel">
-                                                                        <div class="card-block" id="its-height">
-                                                                         <div class="row">
+                                                                    <div class="card-block" id="its-height">
+                                                                        <div class="row">
                                                                             <div class="col-sm-2 col-lg-2">
                                                                                 <b><label for="phone-1" class="block">Upload JD</label></b>
                                                                             </div>
@@ -724,7 +724,7 @@
                                                                                 <div class="input-group">
                                                                                     <input type="text" class="form-control"/>
                                                                                     <span class="input-group-addon">
-                                                                                     <i class="icofont icofont-ui-user"></i>
+                                                                                     <i class="icofont icofont-user-suited"></i>
                                                                                     </span>
                                                                                 </div>
                                                                             </div>
@@ -735,7 +735,7 @@
                                                                             <div class="input-group">
                                                                                 <input type="text" class="form-control"/>
                                                                                 <span class="input-group-addon">
-                                                                                 <i class="icofont icofont-ui-user"></i>
+                                                                                 <i class="icofont icofont-company"></i>
                                                                              </span>
                                                                          </div>
                                                                         </div>  
@@ -749,7 +749,7 @@
                                                                                 <input id="dropper-default" class="form-control" type="text" placeholder="Select your date" />
 
                                                                                 <span class="input-group-addon">
-                                                                                    <i class="icofont icofont-ui-user"></i>
+                                                                                    <i class="icofont icofont-calendar"></i>
                                                                                 </span>
                                                                             </div>
                                                                         </div>
@@ -760,7 +760,7 @@
                                                                             <div class="input-group">
                                                                                 <input id="dropper-animation" class="form-control" type="text" placeholder="Select your date" />
                                                                                 <span class="input-group-addon">
-                                                                                    <i class="icofont icofont-ui-user"></i>
+                                                                                    <i class="icofont icofont-calendar"></i>
                                                                                 </span>
                                                                             </div>
                                                                         </div>  
@@ -797,7 +797,7 @@
                                                                                     <option value="USA">USA</option>
                                                                                 </select>
                                                                                 <span class="input-group-addon">
-                                                                                <i class="icofont icofont-globe"></i>
+                                                                                <i class="icofont icofont-globe-alt"></i>
                                                                                 </span>
                                                                             </div>
                                                                         </div>
@@ -808,7 +808,7 @@
                                                                             <div class="input-group">
                                                                                 <input type="text" class="form-control"/>
                                                                                 <span class="input-group-addon">
-                                                                                    <i class="icofont icofont-ui-user"></i>
+                                                                                    <i class="icofont icofont-ui-map"></i>
                                                                                 </span>
                                                                             </div>
                                                                         </div>  
@@ -845,7 +845,7 @@
                                                                                     <option value="USA">USA</option>
                                                                                 </select>
                                                                                 <span class="input-group-addon">
-                                                                                    <i class="icofont icofont-globe"></i>
+                                                                                    <i class="icofont icofont-ui-map"></i>
                                                                                 </span>
                                                                             </div>
                                                                         </div>
@@ -857,7 +857,7 @@
                                                                             <div class="input-group">
                                                                                 <input type="text" class="form-control">
                                                                                 <span class="input-group-addon">
-                                                                                 <i class="icofont icofont-ui-user"></i>
+                                                                                 <i class="icofont icofont-pin"></i>
                                                                                 </span>
                                                                             </div>
                                                                         </div>
@@ -891,7 +891,7 @@
                                                                                     <option value="WY">JSON</option>
                                                                                 </select>
                                                                                 <span class="input-group-addon">
-                                                                                    <i class="icofont icofont-ui-user"></i>
+                                                                                    <i class="icofont icofont-listing-number"></i>
                                                                                 </span>
                                                                             </div>
                                                                         </div>
