show changes today

--- a/HTML/Theme/dark/index.html
+++ b/HTML/Theme/dark/index.html
@@ -641,6 +641,27 @@
                                         </li>
                                     </ul>
                                 </li>
+                                <li class="">
+                                    <a href="Job-Submission.html">
+                                        <span class="pcoded-micon"><i class="ti-user"></i></span>
+                                        <span class="pcoded-mtext" data-i18n="nav.sample-page.main">Applicant Submission</span>
+                                        <span class="pcoded-mcaret"></span>
+                                    </a>
+                                </li>
+                                <li class="">
+                                    <a href="Job-Description.html">
+                                        <span class="pcoded-micon"><i class="ti-briefcase"></i></span>
+                                        <span class="pcoded-mtext" data-i18n="nav.sample-page.main">Job Description</span>
+                                        <span class="pcoded-mcaret"></span>
+                                    </a>
+                                </li>
+                                <li class="">
+                                    <a href="candidate-apply.html">
+                                        <span class="pcoded-micon"><i class="ti-user"></i></span>
+                                        <span class="pcoded-mtext" data-i18n="nav.sample-page.main">Candidate Application</span>
+                                        <span class="pcoded-mcaret"></span>
+                                    </a>
+                                </li>
                                 </ul>
                             </div>
                                     <!-- <ul class="pcoded-submenu">
