--- a/HTML/Theme/dark/Job-Description.html
+++ b/HTML/Theme/dark/Job-Description.html
@@ -629,19 +629,25 @@
                                 </li>
                                 <li class="">
                                     <a href="Job-Submission.html">
-                                        <span class="pcoded-micon"><i class="ti-layout-sidebar-left"></i></span>
+                                        <span class="pcoded-micon"><i class="ti-user"></i></span>
                                         <span class="pcoded-mtext" data-i18n="nav.sample-page.main">Applicant Submission</span>
                                         <span class="pcoded-mcaret"></span>
                                     </a>
                                 </li>
-                                <li class="">
+                                <li class="active">
                                     <a href="Job-Description.html">
-                                        <span class="pcoded-micon"><i class="ti-layout-sidebar-left"></i></span>
+                                        <span class="pcoded-micon"><i class="ti-briefcase"></i></span>
                                         <span class="pcoded-mtext" data-i18n="nav.sample-page.main">Job Description</span>
                                         <span class="pcoded-mcaret"></span>
                                     </a>
                                 </li>
-
+                                <li class="">
+                                    <a href="candidate-apply.html">
+                                        <span class="pcoded-micon"><i class="ti-user"></i></span>
+                                        <span class="pcoded-mtext" data-i18n="nav.sample-page.main">Candidate Application</span>
+                                        <span class="pcoded-mcaret"></span>
+                                    </a>
+                                </li>
                             </ul>
                         </div>
                     </nav>
