--- a/ATS Website/company.html
+++ b/ATS Website/company.html
@@ -694,7 +694,7 @@
       <div class="row">
         <div class="col-xs-12 col-sm-12 col-md-12 mt-2 mt-sm-2 text-center text-white">
           <p></p>
-          <p class="h6">&copy PureBricks<a class="text-green ml-2" href="https://www.sunlimetech.com" target="_blank"></a>All right reserved.</p>
+          <p class="h6">&copy CrossTab<a class="text-green ml-2" href="" target="_blank"></a>All right reserved.</p>
         </div>
       </div>  
     </div>
